test: matchers para ranges (cover - aula #25)

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea
 exemplo-rspec-tdd/exemplo-rspec-tdd.sublime-project
 exemplo-rspec-tdd/exemplo-rspec-tdd.sublime-workspace
+exemplo-rspec-tdd/tdd-com-ror.sublime-project
+exemplo-rspec-tdd/tdd-com-ror.sublime-workspace
